media query for viewport wider than 30em tho issue remains w tablet landscape viewport being too wide

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -2,25 +2,25 @@
 @import "compass";
 @import "colors";
 @import "clouds";
+@import "invites";
 //@import "dev";
+
+
+.label-test {
+	display:none;
+}
 
 
 // BASE
 // ------------------------------
 body {
-	font-family:"museo-sans", sans-serif;
-	font-weight: 300;
+	//font-family:"museo-sans", sans-serif;
 	background-color:#eeeeee;
 }
 #container {
 	width: 100%;
 }
 
-
-// for larger viewports:
-	// // margin-left: auto;
-	// // margin-right: auto;
-	// border: 1px solid #ccc;
 
 // HEADER
 // ------------------------------
@@ -60,7 +60,7 @@ header {
 // CONTENT
 // ------------------------------
 .content {
-	padding:1em 2em 1em 1em;
+	padding:1.5em 2em 1.2em 1em;
 	overflow:hidden; // prevent horizontal scrolling in mobile safari
 }
 
@@ -68,39 +68,31 @@ header {
 // FORMS
 // ------------------------------
 
-input, textarea {
+input, textarea, .editable-div {
 	width:100%;
 	padding:.3em;
-	font-size: 1.7em;
-}
-.help-text {
-	margin-top: .5em;
-	//font-size: smaller;
-	font-style: italic;
+	font-size: 1.2em;
+	margin-bottom: 1em;
 }
 
-input[type="submit"] {
-	width:100% !important;
+.editable-div {
+    -moz-appearance: textfield;
+    -webkit-appearance: textfield;
+    background-color: white;
+    background-color: -moz-field;
+    border: 1px solid darkgray;
+    box-shadow: 1px 1px 1px 0 lightgray inset;  
+    font: -moz-field;
+    font: -webkit-small-control;  
 }
-.spam_question {
-	//font-size: smaller;
+
+.help {
+	//margin-top: .5em;
+	margin-left:.3em;
+	font-size: .95em;
 	font-style: italic;
 	color:#666666;
-
-	label {
-		font-size: .95em;
-		margin-left:.3em;
-		//margin-bottom: .3em;
-		//padding-bottom: .5em;
-		display:inline;
-	}
-
-	input {
-		margin-top: .3em;
-		display:inline;
-	}
 }
-
 
 // LISTS
 // ------------------------------
@@ -148,130 +140,15 @@ ul.inline, ol.inline {
 	max-width: 100%;
 }
 
+//tablet
+@media all and (min-width: 30em) {
 
-
-// LANDING PAGE
-// ------------------------------
-
-.landing-page {
-	font-family:'Josefin Sans', Helvetica, Arial, sans-serif;
-	position: absolute;
-	top:1em;
-	left:1.5em;
-	right:1.5em;
-	bottom:1.5em;
-
-	.container {
-		width:100%;
-
-			.footer-cell {
-			border-spacing:10px;
-			font-size: .9em;
-			vertical-align:middle;
-			height: 50px;
-		}
-
-		footer {
-			margin-top: 0px;
-			font-size:1.2em;
-			color:#666666;
-		}
+	#container {
+		width: 30em;
+		border: 1px solid #ccc;
+		margin-top: 1em;
+		margin-left: auto;
+		margin-right: auto;
+		overflow:hidden;
 	}
-
-	h1 {
-		font: 4.5em 'Dancing Script', Georgia, Times, serif;
-		color:$ml-red;
-		margin-bottom:.15em;
-	}
-
-	h2 {
-		font-family: 'Josefin Sans', Georgia, Times, serif;
-		font-weight:bold;
-		color: #666;
-		font-size:1.6em;
-		margin-bottom:.25em;
-	}
-
-	p {
-	    font-size: 1.35em;
-	    line-height: 1.3em;
-	    margin-bottom: .5em;
-	}
-	
-	.signup-text-field {
-		//width: 100%;
-		font-size:1em;
-		border:2px solid #98A89E;
-		padding:10px;
-		@include border-radius(5px);
-		width: 7.5em;
-	}
-	.submit-button {
-		width: 100%;
-		margin-left: 5px;
-		border:1px solid #d82e00;
-		@include border-radius(5px);
-
-		font:1em bold arial, helvetica, sans-serif;
-		text-align: center;
-
-		padding: 11px 10px;
-		text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
-
-		color: #FFFFFF;
-		background-color: #FF4411;
-		background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FF4411), color-stop(100%, #D40015));
-		background-image: -webkit-linear-gradient(top, #FF4411, #D40015);
-		background-image: -moz-linear-gradient(top, #FF4411, #D40015);
-		background-image: -ms-linear-gradient(top, #FF4411, #D40015);
-		background-image: -o-linear-gradient(top, #FF4411, #D40015);
-		background-image: linear-gradient(top, #FF4411, #D40015);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FF4411, endColorstr=#D40015);
-	}
-
-	.submit-button:hover{
-		cursor: pointer;
-		border:1px solid #aa2400; background-color: #FFDA24;
-		background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFDA24), color-stop(100%, #D40015));
-		background-image: -webkit-linear-gradient(top, #FFDA24, #D40015);
-		background-image: -moz-linear-gradient(top, #FFDA24, #D40015);
-		background-image: -ms-linear-gradient(top, #FFDA24, #D40015);
-		background-image: -o-linear-gradient(top, #FFDA24, #D40015);
-		background-image: linear-gradient(top, #FFDA24, #D40015);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FFDA24, endColorstr=#D40015);
-	}
-
-	.error { color:$warm-red;
-		padding-top: 10px;
-		font-size: 1.2em;
-
-	}
-
-	.error-messages {
-		margin-top: .5em;
-		clear: both;
-		font-size:1em;
-		font-weight: bold;
-		color:#cc0000;
-
-	}
-	.field_with_errors {
-		display: inline;
-
-		input {
-			border: 2px solid #cc0000;
-		}
-	}
-
-	a, a:visited {
-		color:#666666;
-		text-decoration:none;
-		
-		&:hover {
-			color:black;
-			background-color: transparent;
-		}
-	}
-
-} // .landing-page
-
-
-
+} // @media all and (min-width: 30em)
